# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.342 2005/10/06 20:56:54 wolf31o2 Exp $

  06 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-controller.sh:
  Fixing problem with bind mounted portage and final rsync on tinderbox target
  and adding additional logging.

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/tinderbox_target.py:
  Stop tinderbox from trying to create a tarball of itself

  06 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix catalyst so it fully disables snapcache when its not specified in the
  config file

  06 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/livecd-stage2_template.spec:
  Removed livecd/runscript and livecd/archscript from livecd-stage2 example
  spec template and updating version stamp.

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py:
  allow file_check to proceed if key is not in use

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_lock.py:
  Recursively make the missing directories

  05 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
  Fix extract_modules to just echo a warning that it is missing

  30 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf:
  Updating default configuration for catalyst and updating version stamp,
  since we're beginning internal testing for release.

  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix bug 106004 split strings into a list for empty and rm operation

  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Append slashes to directories so rsyncs work properly

  13 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec: